libcdi/src/cdi.h

int     cdiEncodeDate(int year, int month, int day);
void    cdiDecodeTime(int time, int *hour, int *minute, int *second);
int     cdiEncodeTime(int hour, int minute, int second);
/* STREAM control routines */

int     cdiGetFiletype(const char *path, int *byteorder);
/*      streamOpenRead: Open a dataset for reading */
int     streamOpenRead(const char *path);
/*      streamOpenWrite: Create a new dataset */
int     streamOpenWrite(const char *path, int filetype);
int     streamOpenAppend(const char *path);
/*      streamClose: Close an open dataset */
void    streamClose(int streamID);
/*      streamSync: Synchronize an Open Dataset to Disk */
void    streamSync(int streamID);
/*      streamDefVlist: Define the Vlist for a stream */
void    streamDefVlist(int streamID, int vlistID);
/*      streamInqVlist: Get the Vlist of a stream */
int     streamInqVlist(int streamID);
/*      PIO: */
int     streamInqVlistIDorig(int streamID);
/*      streamInqFiletype: Get the filetype */
int     streamInqFiletype(int streamID);
/*      streamDefByteorder: Define the byteorder */
void    streamDefByteorder(int streamID, int byteorder);
/*      streamInqByteorder: Get the byteorder */
int     streamInqByteorder(int streamID);
/*      streamDefCompType: Define compression type */
void    streamDefCompType(int streamID, int comptype);
/*      streamInqCompType: Get compression type */
int     streamInqCompType(int streamID);
/*      streamDefCompLevel: Define compression level */
void    streamDefCompLevel(int streamID, int complevel);
/*      streamInqCompLevel: Get compression level */
int     streamInqCompLevel(int streamID);
/*      streamDefTimestep: Define time step */
int     streamDefTimestep(int streamID, int tsID);
/*      streamInqTimestep: Get time step */
int     streamInqTimestep(int streamID, int tsID);
/*      PIO: query currently set timestep id  */
int     streamInqCurTimestepID(int streamID);
int     streamInqNvars ( int streamID );
/* STREAM var I/O routines */

/*      streamWriteVar: Write a variable */
void    streamWriteVar(int streamID, int varID, const double *data_vec, int nmiss);
void    streamWriteVarF(int streamID, int varID, const float *data_vec, int nmiss);
/*      streamReadVar: Read a variable */
void    streamReadVar(int streamID, int varID, double *data_vec, int *nmiss);
void    streamReadVarF(int streamID, int varID, float *data_vec, int *nmiss);
/*      streamWriteVarSlice: Write a horizontal slice of a variable */
void    streamWriteVarSlice(int streamID, int varID, int levelID, const double *data_vec, int nmiss);
void    streamWriteVarSliceF(int streamID, int varID, int levelID, const float *data_vec, int nmiss);
/*      streamReadVarSlice: Read a horizontal slice of a variable */
void    streamReadVarSlice(int streamID, int varID, int levelID, double *data_vec, int *nmiss);
void    streamReadVarSliceF(int streamID, int varID, int levelID, float *data_vec, int *nmiss);
/* STREAM record I/O routines */

void    streamDefRecord(int streamID, int  varID, int  levelID);
void    streamInqRecord(int streamID, int *varID, int *levelID);
void    streamWriteRecord(int streamID, const double *data_vec, int nmiss);
void    streamWriteRecordF(int streamID, const float *data_vec, int nmiss);
void    streamReadRecord(int streamID, double *data_vec, int *nmiss);