libcdi/src/mo_cdi.f90

          integer(kind=c_int) :: cdiEncodeDate
        end function cdiEncodeDate
      end interface
      interface
        subroutine cdiDecodeTime(time,hour,minute,second) bind(c,name='cdiDecodeTime')
          import :: c_int
          integer(kind=c_int), value :: time
          integer(kind=c_int), intent(out) :: hour
          integer(kind=c_int), intent(out) :: minute
          integer(kind=c_int), intent(out) :: second
        end subroutine cdiDecodeTime
      end interface
      interface
        function cdiEncodeTime(hour,minute,second) bind(c,name='cdiEncodeTime')
          import :: c_int
          integer(kind=c_int), value :: hour
          integer(kind=c_int), value :: minute
          integer(kind=c_int), value :: second
          integer(kind=c_int) :: cdiEncodeTime
        end function cdiEncodeTime
      end interface
      interface
        function cdiGetFiletype(path,byteorder) bind(c,name='cdiGetFiletype')
          import :: c_char,c_int
          character(kind=c_char), dimension(*) :: path
          integer(kind=c_int), intent(out) :: byteorder
          integer(kind=c_int) :: cdiGetFiletype
        end function cdiGetFiletype
      end interface
      interface
        function streamOpenRead(path) bind(c,name='streamOpenRead')
          import :: c_char,c_int
          character(kind=c_char), dimension(*) :: path
          integer(kind=c_int) :: streamOpenRead
        end function streamOpenRead
      end interface
      interface
        function streamOpenWrite(path,filetype) bind(c,name='streamOpenWrite')
          import :: c_char,c_int
          character(kind=c_char), dimension(*) :: path
          integer(kind=c_int), value :: filetype
          integer(kind=c_int) :: streamOpenWrite
        end function streamOpenWrite
      end interface
      interface
        function streamOpenAppend(path) bind(c,name='streamOpenAppend')
          import :: c_char,c_int
          character(kind=c_char), dimension(*) :: path
          integer(kind=c_int) :: streamOpenAppend
        end function streamOpenAppend
      end interface
      interface
        subroutine streamClose(streamID) bind(c,name='streamClose')
          import :: c_int
          integer(kind=c_int), value :: streamID
        end subroutine streamClose
      end interface
      interface
        subroutine streamSync(streamID) bind(c,name='streamSync')
          import :: c_int
          integer(kind=c_int), value :: streamID
        end subroutine streamSync
      end interface
      interface
        subroutine streamDefVlist(streamID,vlistID) bind(c,name='streamDefVlist')
          import :: c_int
          integer(kind=c_int), value :: streamID
          integer(kind=c_int), value :: vlistID
        end subroutine streamDefVlist
      end interface
      interface
        function streamInqVlist(streamID) bind(c,name='streamInqVlist')
          import :: c_int
          integer(kind=c_int), value :: streamID
          integer(kind=c_int) :: streamInqVlist
        end function streamInqVlist
      end interface
      interface
        function streamInqVlistIDorig(streamID) bind(c,name='streamInqVlistIDorig')
          import :: c_int
          integer(kind=c_int), value :: streamID
          integer(kind=c_int) :: streamInqVlistIDorig
        end function streamInqVlistIDorig
      end interface
      interface
        function streamInqFiletype(streamID) bind(c,name='streamInqFiletype')
          import :: c_int
          integer(kind=c_int), value :: streamID
          integer(kind=c_int) :: streamInqFiletype
        end function streamInqFiletype
      end interface
      interface
        subroutine streamDefByteorder(streamID,byteorder) bind(c,name='streamDefByteorder')
          import :: c_int
          integer(kind=c_int), value :: streamID
          integer(kind=c_int), value :: byteorder
        end subroutine streamDefByteorder
      end interface
      interface
        function streamInqByteorder(streamID) bind(c,name='streamInqByteorder')
          import :: c_int
          integer(kind=c_int), value :: streamID
          integer(kind=c_int) :: streamInqByteorder
        end function streamInqByteorder
      end interface
      interface
        subroutine streamDefCompType(streamID,comptype) bind(c,name='streamDefCompType')
          import :: c_int
          integer(kind=c_int), value :: streamID
          integer(kind=c_int), value :: comptype
        end subroutine streamDefCompType
      end interface
      interface
        function streamInqCompType(streamID) bind(c,name='streamInqCompType')
          import :: c_int
          integer(kind=c_int), value :: streamID
          integer(kind=c_int) :: streamInqCompType
        end function streamInqCompType
      end interface
      interface
        subroutine streamDefCompLevel(streamID,complevel) bind(c,name='streamDefCompLevel')
          import :: c_int
          integer(kind=c_int), value :: streamID
          integer(kind=c_int), value :: complevel
        end subroutine streamDefCompLevel
      end interface
      interface
        function streamInqCompLevel(streamID) bind(c,name='streamInqCompLevel')
          import :: c_int
          integer(kind=c_int), value :: streamID
          integer(kind=c_int) :: streamInqCompLevel
        end function streamInqCompLevel
      end interface
      interface
        function streamDefTimestep(streamID,tsID) bind(c,name='streamDefTimestep')
          import :: c_int
          integer(kind=c_int), value :: streamID
          integer(kind=c_int), value :: tsID
          integer(kind=c_int) :: streamDefTimestep
        end function streamDefTimestep
      end interface
      interface
        function streamInqTimestep(streamID,tsID) bind(c,name='streamInqTimestep')
          import :: c_int
          integer(kind=c_int), value :: streamID
          integer(kind=c_int), value :: tsID
          integer(kind=c_int) :: streamInqTimestep
        end function streamInqTimestep
      end interface
      interface
        function streamInqCurTimestepID(streamID) bind(c,name='streamInqCurTimestepID')
          import :: c_int
          integer(kind=c_int), value :: streamID
          integer(kind=c_int) :: streamInqCurTimestepID
        end function streamInqCurTimestepID
      end interface
      interface
        function streamInqNvars(streamID) bind(c,name='streamInqNvars')
          import :: c_int
          integer(kind=c_int), value :: streamID
          integer(kind=c_int) :: streamInqNvars
        end function streamInqNvars
      end interface
      interface
        subroutine streamWriteVar(streamID,varID,data_vec,nmiss) bind(c,name='streamWriteVar')
          import :: c_int,c_double
          integer(kind=c_int), value :: streamID
          integer(kind=c_int), value :: varID
          real(kind=c_double), intent(in),dimension(*) :: data_vec
          integer(kind=c_int), value :: nmiss
        end subroutine streamWriteVar
      end interface
      interface
        subroutine streamWriteVarF(streamID,varID,data_vec,nmiss) bind(c,name='streamWriteVarF')
          import :: c_int,c_float
          integer(kind=c_int), value :: streamID
          integer(kind=c_int), value :: varID
          real(kind=c_float), intent(in),dimension(*) :: data_vec
          integer(kind=c_int), value :: nmiss
        end subroutine streamWriteVarF
      end interface
      interface
        subroutine streamReadVar(streamID,varID,data_vec,nmiss) bind(c,name='streamReadVar')
          import :: c_int,c_double
          integer(kind=c_int), value :: streamID
          integer(kind=c_int), value :: varID
          real(kind=c_double), intent(out),dimension(*) :: data_vec
          integer(kind=c_int), intent(out) :: nmiss
        end subroutine streamReadVar
      end interface
      interface
        subroutine streamReadVarF(streamID,varID,data_vec,nmiss) bind(c,name='streamReadVarF')
          import :: c_int,c_float
          integer(kind=c_int), value :: streamID
          integer(kind=c_int), value :: varID
          real(kind=c_float), intent(out),dimension(*) :: data_vec
          integer(kind=c_int), intent(out) :: nmiss
        end subroutine streamReadVarF
      end interface
      interface
        subroutine streamWriteVarSlice(streamID,varID,levelID,data_vec,nmiss) bind(c,name='streamWriteVarSlice')
          import :: c_int,c_double
          integer(kind=c_int), value :: streamID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: levelID
          real(kind=c_double), intent(in),dimension(*) :: data_vec
          integer(kind=c_int), value :: nmiss
        end subroutine streamWriteVarSlice
      end interface
      interface
        subroutine streamWriteVarSliceF(streamID,varID,levelID,data_vec,nmiss) bind(c,name='streamWriteVarSliceF')
          import :: c_int,c_float
          integer(kind=c_int), value :: streamID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: levelID
          real(kind=c_float), intent(in),dimension(*) :: data_vec
          integer(kind=c_int), value :: nmiss
        end subroutine streamWriteVarSliceF
      end interface
      interface
        subroutine streamReadVarSlice(streamID,varID,levelID,data_vec,nmiss) bind(c,name='streamReadVarSlice')
          import :: c_int,c_double
          integer(kind=c_int), value :: streamID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: levelID
          real(kind=c_double), intent(out),dimension(*) :: data_vec
          integer(kind=c_int), intent(out) :: nmiss
        end subroutine streamReadVarSlice
      end interface
      interface
        subroutine streamReadVarSliceF(streamID,varID,levelID,data_vec,nmiss) bind(c,name='streamReadVarSliceF')
          import :: c_int,c_float
          integer(kind=c_int), value :: streamID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: levelID
          real(kind=c_float), intent(out),dimension(*) :: data_vec
          integer(kind=c_int), intent(out) :: nmiss
        end subroutine streamReadVarSliceF
      end interface
      interface
        subroutine streamDefRecord(streamID,varID,levelID) bind(c,name='streamDefRecord')
          import :: c_int
          integer(kind=c_int), value :: streamID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: levelID
        end subroutine streamDefRecord
      end interface
      interface
        subroutine streamInqRecord(streamID,varID,levelID) bind(c,name='streamInqRecord')
          import :: c_int
          integer(kind=c_int), value :: streamID
          integer(kind=c_int), intent(out) :: varID
          integer(kind=c_int), intent(out) :: levelID
        end subroutine streamInqRecord
      end interface
      interface
        subroutine streamWriteRecord(streamID,data_vec,nmiss) bind(c,name='streamWriteRecord')
          import :: c_int,c_double
          integer(kind=c_int), value :: streamID
          real(kind=c_double), intent(in),dimension(*) :: data_vec
          integer(kind=c_int), value :: nmiss
        end subroutine streamWriteRecord
      end interface
      interface
        subroutine streamWriteRecordF(streamID,data_vec,nmiss) bind(c,name='streamWriteRecordF')
          import :: c_int,c_float
          integer(kind=c_int), value :: streamID
          real(kind=c_float), intent(in),dimension(*) :: data_vec
          integer(kind=c_int), value :: nmiss
        end subroutine streamWriteRecordF
      end interface
      interface
        subroutine streamReadRecord(streamID,data_vec,nmiss) bind(c,name='streamReadRecord')
          import :: c_int,c_double
          integer(kind=c_int), value :: streamID
          real(kind=c_double), intent(out),dimension(*) :: data_vec
          integer(kind=c_int), intent(out) :: nmiss
        end subroutine streamReadRecord
      end interface
      interface
